# ascal

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-repro-lock.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
benchmarks/blocks/: domain_extended.pddl  domain_original.pddl
benchmarks/blocks/problems/: problem-00.pddl  problem-01.pddl  problem-02.pddl  problem-03.pddl  problem-04.pddl  problem-05.pddl  problem-06.pddl  problem-07.pddl  problem-08.pddl  problem-09.pddl  problem-10.pddl  problem-11.pddl  problem-12.pddl  problem-13.pddl  problem-14.pddl  problem-15.pddl  problem-16.pddl  problem-17.pddl  problem-18.pddl  problem-19.pddl  problem-tiny-3.pddl
benchmarks/debug_pq/: domain.pddl
benchmarks/debug_pq/problems/: problem-00.pddl
benchmarks/driverlog/: domain_extended.pddl  domain_original.pddl
benchmarks/driverlog/problems/: problem-00.pddl  problem-01.pddl  problem-02.pddl  problem-03.pddl  problem-04.pddl  problem-05.pddl  problem-06.pddl  problem-07.pddl  problem-08.pddl  problem-09.pddl  problem-10.pddl  problem-11.pddl  problem-12.pddl  problem-13.pddl  problem-14.pddl  problem-15.pddl  problem-16.pddl  problem-17.pddl  problem-18.pddl  problem-19.pddl
benchmarks/miconic/: domain_extended.pddl  domain_original.pddl
benchmarks/mockup/: domain.pddl  domain2actions.pddl  domain_pq.pddl
benchmarks/satellite/: domain_extended.pddl  domain_original.pddl
notebooks/: Evaluation Learner.ipynb  MultiProblemEvaluation.ipynb
src/ascal/: __init__.py  algorithm.py  evaluation.py  learner.py  logger.py  models.py  transitions.py
tests/: GroupA_StructuralInvariants.ipynb  GroupB_OperatorVerification.ipynb  GroupC_TheoreticalGuarantees.ipynb  GroupD_Monotonicity.ipynb  GroupE_GroundTruthComparison.ipynb  _run_comparison.py  test_smoke.py
(+41 files in other folders)
