[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascal"
version = "0.1.0"
description = "ASCAL: Anytime Sound and Complete Action Learning (online action-model learning with version-space boundaries)."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Diego Aineto", mail={dieaigar@vrain.upv.es} },
  { name = "Enrico Scala", mail = {enrico.scala@unibs.it} },
  { name = "Pablo Copete", mail={pcopgar@doctor.upv.es} },
]
keywords = ["action-model-learning", "planning", "pddl", "unified-planning", "version-space"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "unified-planning>=1.3,<2",
]

[project.optional-dependencies]
notebook = ["numpy", "matplotlib", "jupyter"]
planner  = ["up-fast-downward"]
dev      = ["pytest>=8", "build>=1.2", "twine>=5", "ruff>=0.5"]

[project.urls]
Homepage      = "https://github.com/pablocopete/ascal"
Repository    = "https://github.com/pablocopete/ascal"
Documentation = "https://github.com/pablocopete/ascal#readme"
Issues        = "https://github.com/pablocopete/ascal/issues"
Changelog     = "https://github.com/pablocopete/ascal/blob/main/CHANGELOG.md"
Paper         = "https://proceedings.kr.org/2024/75/kr2024-0075-aineto-et-al.pdf"

[tool.setuptools.packages.find]
where = ["src"]
